--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -6561,8 +6561,10 @@ select:focus {
 
 /* intro-slider */
 .intro-slider {
-  width: 100%;
-  border-bottom: 2px solid #222; }
+  width: 100%; }
+  @media (max-width: 991px) {
+    .intro-slider {
+      border-bottom: 2px solid #222; } }
   .intro-slider .slick-track {
     display: -ms-flexbox;
     display: -webkit-flex;
